fix increased gap between rows on large screens

--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -5,6 +5,7 @@
   gap: 1rem;
   justify-content: center;
   align-items: center;
+  align-content: center;
   padding: 1rem;
   transition:
     opacity 400ms ease,
